Add note on exceptions when using java >= 16